Created lane for unit test

--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,7 @@ Carthage/Build
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/#source-control
 
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
+Test\ CI/fastlane/report.xml
+Test\ CI/fastlane/Preview.html
+Test\ CI/fastlane/screenshots
+Test\ CI/fastlane/test_output
